# its-knowledge-base

./: .gitignore  LICENSE  README.md
html-extractor/: index.js  package.json
nlpTesting/: chat.py  chatdata.pth  data.json  jsontesting.py  langChainModel.py  langChainTesting.py  langchain_llamacpp.py  main.py  model.py  nltk_utils.py  requirements.txt  test.pth  train.py
nlpTesting/myapp/: pyproject.toml
nlpTesting/myapp/app/: server.py
node-langchain/: docLoader.ts  langModel-faiss.ts  langModel.ts  next-env.d.ts  package.json  tsconfig.json
qa-chatbot/: requirements.txt
qa-chatbot/myapp/: README.md
qa-chatbot/myapp/app/: server.py
qa-chatbot/myapp/app/utils/: loader.py
web-app/: package.json  tailwind.config.ts  tsconfig.json
web-app-shadcn/: .env.example  package.json  tailwind.config.ts
web-app-shadcn/prisma/: schema.prisma
web-app-shadcn/src/: middleware.ts  next-auth.d.ts
web-app-shadcn/src/app/: globals.css  layout.tsx  page.tsx
web-app-shadcn/src/app/(demo)/: layout.tsx
web-app-shadcn/src/app/(embeddable)/: layout.tsx
web-app-shadcn/src/app/(main)/: layout.tsx  page.tsx
web-app-shadcn/src/app/auth/: layout.tsx
web-app-shadcn/src/app/authentication/: page.tsx
web-app-shadcn/src/app/chatbox/: page.tsx
web-app-shadcn/src/components/: ChatMessage.tsx  ChatWindow.tsx  ChatboxForm.tsx  ChatboxModal.tsx  ChatboxState.tsx  NavigationMenu.tsx
web-app-shadcn/src/lib/: authOptions.ts  prisma.ts  utils.ts
web-app/src/app/: layout.tsx  page.tsx  providers.tsx
web-app/src/components/: AccordionList.tsx  Chatbox.tsx
(+47 files in other folders)
